fix(security): Restore security boundaries and fix critical configuration issues
BREAKING CHANGES:
- Re-enabled workspace trust in devcontainer (security.workspace.trust)
- Disabled auto-approve in devcontainer and workspace settings
- Developers must opt-in to auto-approve via personal User Settings

Security Fixes:
- .devcontainer/devcontainer.json: Removed auto-approve, restored workspace trust
- .vscode/settings.json: Disabled auto-approve, require explicit confirmations
- Auto-approval now requires per-developer opt-in (not enforced globally)

Configuration Fixes:
- .gitignore: Uncommented package-lock.json to prevent npm/pnpm conflicts
- lib/audit.ts: Fixed action parsing to preserve full context (was dropping segments)
- lib/audit.ts: Fixed success field to require explicit true (was defaulting to true)

Translation Fixes:
- i18n/en.json: Renamed office_supplies to officeSupplies (snake_case → camelCase)
- i18n/ar.json: Renamed office_supplies to officeSupplies (consistency)

See: https://code.visualstudio.com/docs/editor/workspace-trust

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -346,7 +346,7 @@
       "utility": "خدمات",
       "utilities": "المرافق",
       "administrative": "إداري",
-      "office_supplies": "مستلزمات المكتب",
+      "officeSupplies": "مستلزمات المكتب",
       "electrical": "كهربائي",
       "hvac": "التكييف والتهوية",
       "plumbing": "السباكة",
