--- a/i18n/en.json
+++ b/i18n/en.json
@@ -346,7 +346,7 @@
       "utility": "Utility",
       "utilities": "Utilities",
       "administrative": "Administrative",
-      "office_supplies": "Office Supplies",
+      "officeSupplies": "Office Supplies",
       "electrical": "Electrical",
       "hvac": "HVAC",
       "plumbing": "Plumbing",
