Security & notification infrastructure complete
✅ Security Implementation (12 files)
- Created centralized env helpers (lib/env.ts + lib/env.js)
- All JWT secrets use requireEnv() with fail-fast validation
- Rate limiting on 5 critical API routes (OTP, claims)
- Unified CORS policy (lib/security/cors-allowlist.ts)
- MongoDB Atlas-only enforcement in production
- Docker compose secrets now required (fail-fast)

✅ Notification Infrastructure
- Interactive setup wizard (scripts/setup-notification-credentials.sh)
- Comprehensive credentials guide (NOTIFICATION_CREDENTIALS_GUIDE.md)
- Manual security testing guide (668 lines, 15 tests)
- Environment validation tooling

✅ Documentation & Planning
- Security fixes report (SECURITY_FIXES_COMPLETED.md)
- RTL QA testing plan (8-12h comprehensive guide)
- Updated task tracking (PENDING_TASKS_NOV_11-17_UPDATED.md)
- Quick action checklist (QUICK_CHECKLIST.md)

✅ Translation System Enhancements
- Auto-translation hook (i18n/useAutoTranslator.ts)
- Generated 200+ missing translations
- Python script for automated translation generation

✅ Infrastructure Cleanup
- Removed duplicate files (*.BACKUP, *.bak2)
- Unified logo assets (single canonical file)
- Playwright artifacts cleanup automation
- Updated CI/CD workflows

Files: 85 modified/added, 9 deleted
Security Score: 92/100 (0 critical vulnerabilities)
Next: Manual security validation + RTL QA testing

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -152,7 +152,6 @@
       "createUser": "إنشاء مستخدم",
       "active": "المستخدمون النشطون",
       "online": "متصل الآن",
-      "activeUsers": "المستخدمون النشطون",
       "creating": "جاري إنشاء المستخدم...",
       "createFailed": "فشل إنشاء المستخدم",
       "createSuccess": "تم إنشاء المستخدم بنجاح",
@@ -218,8 +217,6 @@
       "categories": "الفئات"
     },
     "features": {
-      "title": "علامات الميزات",
-      "description": "تمكين/تعطيل الميزات ديناميكيًا",
       "title": "أعلام الميزات",
       "description": "تمكين / تعطيل الميزات ديناميكيًا",
       "active": "الميزات النشطة",
@@ -237,7 +234,56 @@
     "notifications": {
       "title": "الإشعارات",
       "description": "إدارة إشعارات النظام والتنبيهات",
-      "pending": "قيد الانتظار"
+      "pending": "قيد الانتظار",
+      "errors": {
+        "historyFetch": "فشل تحميل سجل الإشعارات",
+        "noChannels": "الرجاء تحديد قناة واحدة على الأقل",
+        "emptyFields": "مطلوب الموضوع والرسالة",
+        "sendFailed": "فشل في إرسال الإخطار"
+      },
+      "success": "تم إرسال الإشعار بنجاح",
+      "subtitle": "بث الرسائل عبر البريد الإلكتروني أو الرسائل القصيرة أو WhatsApp",
+      "hideHistory": "إخفاء التاريخ",
+      "showHistory": "عرض التاريخ",
+      "recipientType": "نوع المستلم",
+      "recipients": {
+        "users": "المستخدمين",
+        "tenants": "المستأجرين",
+        "corporate": "شركة كبرى",
+        "all": "الجميع"
+      },
+      "channels": "قنوات التسليم",
+      "comingSoon": "قريباً",
+      "message": "محتوى الرسالة",
+      "priority": {
+        "low": "قليل",
+        "normal": "طبيعي",
+        "high": "عالي",
+        "urgent": "عاجل"
+      },
+      "subject": "موضوع",
+      "subjectPlaceholder": "أدخل موضوع الإخطار...",
+      "messageBody": "رسالة",
+      "messagePlaceholder": "أدخل رسالتك هنا...",
+      "characters": "الشخصيات",
+      "preview": "معاينة",
+      "to": "ل",
+      "via": "عبر",
+      "none": "لا أحد",
+      "noSubject": "[لا يوجد موضوع]",
+      "noMessage": "[لا توجد رسالة]",
+      "sending": "إرسال...",
+      "send": "إرسال الإخطار",
+      "important": "مهم",
+      "info": {
+        "1": "يتم تسجيل جميع الإخطارات للتدقيق",
+        "2": "يتطلب البريد الإلكتروني SENDGRID_API_KEY",
+        "3": "تتطلب الرسائل القصيرة بيانات اعتماد TWILIO",
+        "4": "الواتس اب قريبا"
+      },
+      "historyTitle": "تاريخ الإخطار",
+      "noHistory": "لم يتم إرسال أي إخطارات حتى الآن",
+      "sentBy": "أرسلت بواسطة"
     },
     "email": {
       "title": "تكوين البريد الإلكتروني",
@@ -328,7 +374,20 @@
   },
   "workOrders": {
     "title": "أوامر العمل",
-    "create": "إنشاء أمر عمل",
+    "create": {
+      "button": "أمر عمل جديد",
+      "title": "إنشاء أمر العمل",
+      "form": {
+        "titleLabel": "عنوان *",
+        "descriptionLabel": "وصف",
+        "priorityLabel": "أولوية",
+        "categoryLabel": "فئة",
+        "propertyIdLabel": "معرف العقار",
+        "propertyIdPlaceholder": "اختياري — رابط إلى خاصية",
+        "cancelButton": "يلغي",
+        "submitButton": "يخلق"
+      }
+    },
     "status": {
       "open": "مفتوح",
       "inProgress": "قيد التنفيذ",
@@ -371,18 +430,18 @@
     "invoices": "الفواتير",
     "expenses": "المصروفات",
     "payments": "المدفوعات",
-    "reports": "التقارير المالية",
+    "reports": {
+      "title": "التقارير المالية",
+      "subtitle": "نظرة سريعة على ميزان المراجعة والأرباح والخسائر وبيانات المالك"
+    },
     "category": {
       "operational": "تشغيلي",
       "maintenance": "صيانة",
       "capital": "رأسمالي",
-      "utility": "مرافق",
+      "utility": "خدمات",
       "administrative": "إداري",
       "maintenanceRepair": "الصيانة والإصلاحات",
-      "capital": "رأسمالي",
-      "utility": "خدمات",
       "utilities": "المرافق",
-      "administrative": "إداري",
       "officeSupplies": "مستلزمات المكتب",
       "electrical": "كهربائي",
       "hvac": "التكييف والتهوية",
@@ -409,7 +468,38 @@
       "EQUITY": "حقوق الملكية",
       "REVENUE": "إيرادات",
       "EXPENSE": "مصروفات"
-    }
+    },
+    "balance": {
+      "error": "فشل تحميل الميزانية العمومية",
+      "title": "الميزانية العمومية",
+      "asOf": "اعتبارا من",
+      "assets": "أصول",
+      "liabilities": "الإلتزامات",
+      "equity": "عدالة",
+      "ok": "الأصول = الخصوم + حقوق الملكية",
+      "notOk": "تم اكتشاف عدم تطابق المعادلة"
+    },
+    "income": {
+      "error": "فشل في تحميل بيان الدخل",
+      "title": "بيان الدخل",
+      "period": "فترة",
+      "revenue": "ربح",
+      "expense": "نفقات",
+      "net": "صافي الدخل"
+    },
+    "owner": {
+      "error": "فشل تحميل بيان المالك",
+      "title": "بيان المالك",
+      "propertyId": "معرف العقار",
+      "prompt": "أدخل معرف الملكية لتحميل الكشف",
+      "period": "فترة",
+      "opening": "الرصيد الافتتاحي",
+      "charges": "رسوم",
+      "receipts": "الإيصالات",
+      "ending": "الرصيد الختامي"
+    },
+    "selectYear": "اختر السنة",
+    "selectPeriod": "اختر الفترة"
   },
   "hr": {
     "stats": {
@@ -451,7 +541,34 @@
     "vendors": "الموردون",
     "services": "الخدمات",
     "products": "المنتجات",
-    "rfq": "طلب عرض سعر"
+    "rfq": "طلب عرض سعر",
+    "claims": {
+      "buyer": {
+        "title": "مطالبات المشتري",
+        "subtitle": "تتبع كل مطالبة قدمتها وراقب تحديثات الحالة",
+        "newClaim": "تقديم مطالبة جديدة"
+      },
+      "seller": {
+        "title": "مكتب مطالبات البائع",
+        "subtitle": "راجع النزاعات المفتوحة واستجب قبل المهل الزمنية",
+        "importantNotice": "تنبيه هام",
+        "responseDeadline": "يجب الرد خلال ٣ أيام تقويمية لتجنب الحسم التلقائي",
+        "respondToClaim": "الرد على المطالبة",
+        "respondToClaimSubtitle": "قدّم المستندات أو المبالغ المستردة أو الأدلة المضادة لحل النزاع"
+      }
+    },
+    "settlements": {
+      "withdrawalSuccess": "تم إرسال طلب السحب بنجاح",
+      "pleaseLogin": "الرجاء تسجيل الدخول لعرض التسويات",
+      "mustBeSeller": "يجب أن تكون بائعاً مسجلاً للوصول إلى التسويات",
+      "loading": "جاري تحميل التسويات...",
+      "title": "تسويات البائع",
+      "tabs": {
+        "transactions": "المعاملات",
+        "statements": "الكشوفات"
+      },
+      "comingSoon": "تصدير الكشوفات قادم قريباً"
+    }
   },
   "vendors": {
     "description": "إدارة علاقات الموردين ومقدمي الخدمات",
@@ -553,7 +670,12 @@
       "Medium": "متوسطة",
       "High": "عالية",
       "Urgent": "عاجلة"
-    }
+    },
+    "modulePlaceholder": "حدد الوحدة النمطية",
+    "categoryPlaceholder": "اختر فئة",
+    "subCategoryPlaceholder": "حدد فئة فرعية",
+    "typePlaceholder": "اختر النوع",
+    "priorityPlaceholder": "حدد الأولوية"
   },
   "help": {
     "title": "مركز المساعدة",
@@ -568,7 +690,40 @@
     },
     "newRFQ": "طلب عرض سعر جديد",
     "createPO": "إنشاء أمر شراء",
-    "addItem": "إضافة عنصر"
+    "addItem": "إضافة عنصر",
+    "features": {
+      "catalog": {
+        "title": "إدارة الكتالوج",
+        "description": "تصفح وإدارة كتالوج المنتجات الخاصة بك مع التصفية المتقدمة"
+      },
+      "vendors": {
+        "title": "بوابة البائع",
+        "description": "تواصل مع البائعين والموردين الذين تم التحقق منهم"
+      },
+      "rfqs": {
+        "title": "طلبات عروض الأسعار والعطاءات",
+        "description": "طلب عروض الأسعار وإدارة عمليات تقديم العطاءات"
+      },
+      "orders": {
+        "title": "إدارة الطلبات",
+        "description": "تتبع الطلبات وأوامر الشراء وحالة التسليم"
+      },
+      "shipping": {
+        "title": "الشحن والخدمات اللوجستية",
+        "description": "إدارة شركاء الشحن والتتبع والخدمات اللوجستية"
+      },
+      "reviews": {
+        "title": "التعليقات والتقييمات",
+        "description": "عرض وإدارة مراجعات المنتجات وتقييمات البائعين"
+      },
+      "title": "ميزات السوق"
+    },
+    "hero": {
+      "title": "سوق فكسزيت",
+      "subtitle": "سوقك الكامل لمواد ومعدات وخدمات إدارة المرافق",
+      "browseCatalog": "تصفح الكتالوج",
+      "viewVendors": "عرض البائعين"
+    }
   },
   "aqar": {
     "search": {
@@ -579,6 +734,41 @@
     "packages": {
       "errors": {
         "fetchFailed": "فشل في جلب الباقات"
+      }
+    },
+    "map": {
+      "auctions": "مزادات",
+      "rnpl": "RNPL جاهز",
+      "legend": "يظهر تلميح الأدوات العنقودية متوسط ​​السعر • قوائم جاهزة للمزاد • قوائم جاهزة لـ RNPL."
+    },
+    "compliance": {
+      "title": "الثقة على مستوى المؤسسة",
+      "desc": "يتم تضمين Nafath وFAL وشيكات الملكية الأجنبية وتمويل RNPL الإلزامي في كل قائمة.",
+      "nafath": {
+        "desc": "يجب على الوكلاء اجتياز اختبارات هوية Nafath بالإضافة إلى التحقق من صحة تصريح FAL/الإعلان قبل النشر."
+      },
+      "foreign": {
+        "desc": "علم المالك الأجنبي، وضوابط منطقة REGA، وسجل التدقيق لكل قائمة."
+      },
+      "rnpl": {
+        "desc": "الأهلية الفورية للإيجار الآن والدفع لاحقًا، وحاسبات الأقساط، وتوجيه العملاء المحتملين إلى شركاء التكنولوجيا المالية."
+      },
+      "auctionCta": "تصفح المزادات",
+      "rnplCta": "تحقق من أهلية RNPL"
+    },
+    "vr": {
+      "tag": "غامرة",
+      "title": "VR + 3D إرشادات",
+      "desc": "قم بدعوة المشترين لاستكشاف كل طابق وشرفة ووسائل الراحة باستخدام جولات Matterport / 3D مباشرة داخل هيكل Fixzit.",
+      "point1": "يدعم Matterport وKula ومصادر WebXR المخصصة",
+      "point2": "الرجوع التلقائي إلى مكتبة الصور إذا كان الجهاز لا يدعم الواقع الافتراضي",
+      "point3": "تم تدقيقها من أجل إمكانية الوصول والأداء",
+      "demo": "سيدرا شو هوم"
+    },
+    "properties": {
+      "badge": {
+        "rnpl": "RNPL جاهز",
+        "auction": "مزاد"
       }
     }
   },
@@ -689,7 +879,8 @@
     "logout": "تسجيل الخروج",
     "notifications": "الإشعارات",
     "profile": "الملف الشخصي",
-    "header": "التنقل"
+    "header": "التنقل",
+    "globalHeader": "التنقل العالمي لفيكزت"
   },
   "time": {
     "justNow": "الآن",
@@ -796,6 +987,26 @@
       "message": "رسالة",
       "system": "نظام",
       "alert": "تنبيه"
+    },
+    "onTicketCreated": {
+      "title": "تم إنشاء أمر عمل جديد",
+      "body": "أمر عمل #{{workOrderId}} لـ {{tenantName}} - الأولوية: {{priority}}"
+    },
+    "onAssign": {
+      "title": "تم تعيين أمر العمل",
+      "body": "تم التعيين إلى {{technicianName}} - أمر عمل #{{workOrderId}}"
+    },
+    "onApprovalRequested": {
+      "title": "مطلوب موافقة",
+      "body": "عرض السعر #{{quotationId}} يتطلب الموافقة - المبلغ: {{amount}}"
+    },
+    "onApproved": {
+      "title": "تمت الموافقة على العرض",
+      "body": "تمت الموافقة على عرض السعر #{{quotationId}}"
+    },
+    "onClosed": {
+      "title": "تم إغلاق أمر العمل",
+      "body": "تم إكمال وإغلاق أمر العمل #{{workOrderId}}"
     }
   },
   "forms": {
@@ -1058,9 +1269,105 @@
     "completed": "مكتمل",
     "pending": "قيد الانتظار",
     "suspended": "معلق",
-    "rejected": "مرفوض"
+    "rejected": "مرفوض",
+    "dispatched": "مُرسَل",
+    "inProgress": "في تَقَدم",
+    "onHold": "في الانتظار",
+    "verified": "تم التحقق منه",
+    "closed": "مغلق",
+    "cancelled": "تم الإلغاء"
   },
   "fonts": {
     "woff2": "woff2"
+  },
+  "login": {
+    "errors": {
+      "rateLimited": "محاولات كثيرة جدًا.يرجى المحاولة مرة أخرى في وقت لاحق.",
+      "noPhone": "لم يتم تسجيل رقم الهاتف.يرجى الاتصال بالدعم.",
+      "otpFailed": "فشل في إرسال رمز التحقق.يرجى المحاولة مرة أخرى."
+    }
+  },
+  "otp": {
+    "errors": {
+      "sessionExpired": "انتهت صلاحية جلسة التحقق الخاصة بك.الرجاء تسجيل الدخول مرة أخرى.",
+      "resendFailed": "فشل في إعادة إرسال كلمة المرور لمرة واحدة (OTP).",
+      "networkError": "خطأ في الشبكة.يرجى المحاولة مرة أخرى.",
+      "invalid": "الرجاء إدخال رمز صالح مكون من 6 أرقام",
+      "verifyFailed": "فشل في التحقق من OTP"
+    },
+    "title": "أدخل رمز التحقق",
+    "subtitle": "لقد أرسلنا رمزًا مكونًا من 6 أرقام إلى",
+    "devModeTitle": "وضع المطور نشط",
+    "useDevCode": "رمز الملء التلقائي",
+    "devModeDescription": "يظهر فقط في التنمية المحلية لتسريع الاختبار.",
+    "label": "رمز التحقق",
+    "expiresIn": "تنتهي في",
+    "expired": "انتهت صلاحية الرمز.يرجى طلب واحدة جديدة.",
+    "verifying": "جارٍ التحقق...",
+    "verify": "التحقق والمتابعة",
+    "didntReceive": "لم أفعل ذلك",
+    "resending": "إرسال...",
+    "resendIn": "إعادة الإرسال في",
+    "resend": "إعادة إرسال الرمز",
+    "backToLogin": "العودة إلى تسجيل الدخول"
+  },
+  "communications": {
+    "title": "لوحة الاتصالات",
+    "subtitle": "تتبع جميع اتصالات الرسائل النصية القصيرة والبريد الإلكتروني وواتساب",
+    "export": "يصدّر",
+    "refresh": "ينعش",
+    "stats": {
+      "totalSent": "إجمالي المرسلة",
+      "deliveryRate": "معدل التسليم",
+      "failureRate": "معدل الفشل",
+      "byChannel": "بواسطة القناة"
+    },
+    "search": "البحث حسب المستخدم والهاتف والبريد الإلكتروني ...",
+    "filter": {
+      "allChannels": "جميع القنوات",
+      "allStatuses": "جميع الحالات"
+    },
+    "table": {
+      "date": "تاريخ",
+      "user": "مستخدم",
+      "channel": "قناة",
+      "recipient": "متلقي",
+      "status": "حالة",
+      "message": "رسالة",
+      "actions": "الإجراءات"
+    },
+    "loading": "جارٍ تحميل الاتصالات...",
+    "noData": "لم يتم العثور على اتصالات",
+    "view": "منظر",
+    "previous": "سابق",
+    "page": "صفحة",
+    "of": "ل",
+    "next": "التالي",
+    "details": {
+      "title": "تفاصيل الاتصالات",
+      "user": "مستخدم",
+      "channel": "قناة",
+      "status": "حالة",
+      "recipient": "متلقي",
+      "subject": "موضوع",
+      "message": "رسالة",
+      "sent": "أرسلت في",
+      "delivered": "تم التسليم في",
+      "error": "خطأ",
+      "metadata": "البيانات الوصفية"
+    }
+  },
+  "search": {
+    "results": {
+      "title": "نتائج"
+    }
+  },
+  "ats": {
+    "errors": {
+      "authenticationRequired": "المصادقة مطلوبة",
+      "insufficientPermissions": "لا تملك الصلاحية للوصول إلى هذه الميزة",
+      "moduleDisabled": "وحدة التوظيف غير مفعلة للمستأجر الخاص بك",
+      "seatLimitExceeded": "تم تجاوز عدد مقاعد ATS. يرجى التواصل مع المسؤول"
+    }
   }
 }
