--- a/i18n/en.json
+++ b/i18n/en.json
@@ -152,7 +152,6 @@
       "createUser": "Create User",
       "active": "Active Users",
       "online": "Online Now",
-      "activeUsers": "Active Users",
       "creating": "Creating user...",
       "createFailed": "Failed to create user",
       "createSuccess": "User created successfully",
@@ -235,7 +234,56 @@
     "notifications": {
       "title": "Notifications",
       "description": "Manage system notifications and alerts",
-      "pending": "Pending"
+      "pending": "Pending",
+      "errors": {
+        "historyFetch": "Failed to load notification history",
+        "noChannels": "Please select at least one channel",
+        "emptyFields": "Subject and message are required",
+        "sendFailed": "Failed to send notification"
+      },
+      "success": "Notification sent successfully",
+      "subtitle": "Broadcast messages via Email, SMS, or WhatsApp",
+      "hideHistory": "Hide History",
+      "showHistory": "Show History",
+      "recipientType": "Recipient Type",
+      "recipients": {
+        "users": "Users",
+        "tenants": "Tenants",
+        "corporate": "Corporate",
+        "all": "All"
+      },
+      "channels": "Delivery Channels",
+      "comingSoon": "Coming Soon",
+      "message": "Message Content",
+      "priority": {
+        "low": "Low",
+        "normal": "Normal",
+        "high": "High",
+        "urgent": "Urgent"
+      },
+      "subject": "Subject",
+      "subjectPlaceholder": "Enter notification subject...",
+      "messageBody": "Message",
+      "messagePlaceholder": "Enter your message here...",
+      "characters": "characters",
+      "preview": "Preview",
+      "to": "To",
+      "via": "Via",
+      "none": "None",
+      "noSubject": "[No Subject]",
+      "noMessage": "[No Message]",
+      "sending": "Sending...",
+      "send": "Send Notification",
+      "important": "Important",
+      "info": {
+        "1": "All notifications are logged for audit",
+        "2": "Email requires SENDGRID_API_KEY",
+        "3": "SMS requires TWILIO credentials",
+        "4": "WhatsApp coming soon"
+      },
+      "historyTitle": "Notification History",
+      "noHistory": "No notifications sent yet",
+      "sentBy": "Sent by"
     },
     "email": {
       "title": "Email Configuration",
@@ -326,7 +374,20 @@
   },
   "workOrders": {
     "title": "Work Orders",
-    "create": "Create Work Order",
+    "create": {
+      "button": "New Work Order",
+      "title": "Create work order",
+      "form": {
+        "titleLabel": "Title *",
+        "descriptionLabel": "Description",
+        "priorityLabel": "Priority",
+        "categoryLabel": "Category",
+        "propertyIdLabel": "Property ID",
+        "propertyIdPlaceholder": "Optional — link to a property",
+        "cancelButton": "Cancel",
+        "submitButton": "Create"
+      }
+    },
     "status": {
       "open": "Open",
       "inProgress": "In Progress",
@@ -369,7 +430,10 @@
     "invoices": "Invoices",
     "expenses": "Expenses",
     "payments": "Payments",
-    "reports": "Financial Reports",
+    "reports": {
+      "title": "Financial Reports",
+      "subtitle": "Trial balance, P&L, and owner statements at a glance"
+    },
     "category": {
       "operational": "Operational",
       "maintenance": "Maintenance",
@@ -377,10 +441,7 @@
       "utility": "Utility",
       "administrative": "Administrative",
       "maintenanceRepair": "Maintenance & Repairs",
-      "capital": "Capital",
-      "utility": "Utility",
       "utilities": "Utilities",
-      "administrative": "Administrative",
       "officeSupplies": "Office Supplies",
       "electrical": "Electrical",
       "hvac": "HVAC",
@@ -407,7 +468,38 @@
       "EQUITY": "Equity",
       "REVENUE": "Revenue",
       "EXPENSE": "Expense"
-    }
+    },
+    "balance": {
+      "error": "Failed to load balance sheet",
+      "title": "Balance Sheet",
+      "asOf": "As of",
+      "assets": "Assets",
+      "liabilities": "Liabilities",
+      "equity": "Equity",
+      "ok": "Assets = Liabilities + Equity",
+      "notOk": "Equation mismatch detected"
+    },
+    "income": {
+      "error": "Failed to load income statement",
+      "title": "Income Statement",
+      "period": "Period",
+      "revenue": "Revenue",
+      "expense": "Expenses",
+      "net": "Net Income"
+    },
+    "owner": {
+      "error": "Failed to load owner statement",
+      "title": "Owner Statement",
+      "propertyId": "Property ID",
+      "prompt": "Enter a property ID to load the statement",
+      "period": "Period",
+      "opening": "Opening Balance",
+      "charges": "Charges",
+      "receipts": "Receipts",
+      "ending": "Ending Balance"
+    },
+    "selectYear": "Select year",
+    "selectPeriod": "Select period"
   },
   "hr": {
     "stats": {
@@ -449,7 +541,34 @@
     "vendors": "Vendors",
     "services": "Services",
     "products": "Products",
-    "rfq": "Request for Quote"
+    "rfq": "Request for Quote",
+    "claims": {
+      "buyer": {
+        "title": "Buyer claims",
+        "subtitle": "Track every claim you have filed and monitor status updates",
+        "newClaim": "File new claim"
+      },
+      "seller": {
+        "title": "Seller claims desk",
+        "subtitle": "Review open disputes and respond before deadlines",
+        "importantNotice": "Important notice",
+        "responseDeadline": "Respond within 3 calendar days to avoid automatic resolutions",
+        "respondToClaim": "Respond to claim",
+        "respondToClaimSubtitle": "Provide documentation, refunds, or counter evidence to resolve the dispute"
+      }
+    },
+    "settlements": {
+      "withdrawalSuccess": "Withdrawal submitted successfully",
+      "pleaseLogin": "Please sign in to view settlements",
+      "mustBeSeller": "You must be a registered seller to access settlements",
+      "loading": "Loading settlements...",
+      "title": "Seller settlements",
+      "tabs": {
+        "transactions": "Transactions",
+        "statements": "Statements"
+      },
+      "comingSoon": "Statements export coming soon"
+    }
   },
   "vendors": {
     "description": "Manage your vendor relationships and service providers",
@@ -551,7 +670,12 @@
       "Medium": "Medium",
       "High": "High",
       "Urgent": "Urgent"
-    }
+    },
+    "modulePlaceholder": "Select module",
+    "categoryPlaceholder": "Select category",
+    "subCategoryPlaceholder": "Select sub-category",
+    "typePlaceholder": "Select type",
+    "priorityPlaceholder": "Select priority"
   },
   "help": {
     "title": "Help Center",
@@ -566,7 +690,40 @@
     },
     "newRFQ": "New RFQ",
     "createPO": "Create Purchase Order",
-    "addItem": "Add Item"
+    "addItem": "Add Item",
+    "features": {
+      "catalog": {
+        "title": "Catalog Management",
+        "description": "Browse and manage your product catalog with advanced filtering"
+      },
+      "vendors": {
+        "title": "Vendor Portal",
+        "description": "Connect with verified vendors and suppliers"
+      },
+      "rfqs": {
+        "title": "RFQs & Bids",
+        "description": "Request for quotations and manage bidding processes"
+      },
+      "orders": {
+        "title": "Order Management",
+        "description": "Track orders, purchase orders, and delivery status"
+      },
+      "shipping": {
+        "title": "Shipping & Logistics",
+        "description": "Manage shipping, tracking, and logistics partners"
+      },
+      "reviews": {
+        "title": "Reviews & Ratings",
+        "description": "View and manage product reviews and vendor ratings"
+      },
+      "title": "Marketplace Features"
+    },
+    "hero": {
+      "title": "Fixzit Souq",
+      "subtitle": "Your complete marketplace for facility management materials, equipment, and services",
+      "browseCatalog": "Browse Catalog",
+      "viewVendors": "View Vendors"
+    }
   },
   "aqar": {
     "search": {
@@ -577,6 +734,41 @@
     "packages": {
       "errors": {
         "fetchFailed": "Failed to fetch packages"
+      }
+    },
+    "map": {
+      "auctions": "auctions",
+      "rnpl": "RNPL-ready",
+      "legend": "Cluster tooltip shows avg price • auction-ready listings • RNPL-ready listings."
+    },
+    "compliance": {
+      "title": "Enterprise-grade trust",
+      "desc": "Mandatory Nafath, FAL, foreign ownership checks and RNPL financing baked into every listing.",
+      "nafath": {
+        "desc": "Agents must pass Nafath identity checks plus FAL/ad permit validation before publishing."
+      },
+      "foreign": {
+        "desc": "Foreign-owner flag, REGA zone controls, and audit history for every listing."
+      },
+      "rnpl": {
+        "desc": "Instant Rent-Now-Pay-Later eligibility, installment calculators, and lead routing to fintech partners."
+      },
+      "auctionCta": "Browse auctions",
+      "rnplCta": "Check RNPL eligibility"
+    },
+    "vr": {
+      "tag": "Immersive",
+      "title": "VR + 3D walkthroughs",
+      "desc": "Invite buyers to explore every floor, balcony, and amenity using Matterport / 3D tours directly inside the Fixzit shell.",
+      "point1": "Supports Matterport, Kuula, and custom WebXR sources",
+      "point2": "Auto-fallback to photo carousel if device does not support VR",
+      "point3": "Audited for accessibility and performance",
+      "demo": "Sedra Show Home"
+    },
+    "properties": {
+      "badge": {
+        "rnpl": "RNPL Ready",
+        "auction": "Auction"
       }
     }
   },
@@ -687,7 +879,8 @@
     "logout": "Logout",
     "notifications": "Notifications",
     "profile": "Profile",
-    "header": "Navigation"
+    "header": "Navigation",
+    "globalHeader": "Fixzit global navigation"
   },
   "time": {
     "justNow": "Just now",
@@ -794,6 +987,26 @@
       "message": "Message",
       "system": "System",
       "alert": "Alert"
+    },
+    "onTicketCreated": {
+      "title": "New Work Order Created",
+      "body": "Work order #{{workOrderId}} for {{tenantName}} - Priority: {{priority}}"
+    },
+    "onAssign": {
+      "title": "Work Order Assigned",
+      "body": "Assigned to {{technicianName}} - Work Order #{{workOrderId}}"
+    },
+    "onApprovalRequested": {
+      "title": "Approval Required",
+      "body": "Quote #{{quotationId}} requires approval - Amount: {{amount}}"
+    },
+    "onApproved": {
+      "title": "Quote Approved",
+      "body": "Quote #{{quotationId}} has been approved"
+    },
+    "onClosed": {
+      "title": "Work Order Closed",
+      "body": "Work Order #{{workOrderId}} has been completed and closed"
     }
   },
   "forms": {
@@ -1056,9 +1269,105 @@
     "completed": "Completed",
     "pending": "Pending",
     "suspended": "Suspended",
-    "rejected": "Rejected"
+    "rejected": "Rejected",
+    "dispatched": "Dispatched",
+    "inProgress": "In Progress",
+    "onHold": "On Hold",
+    "verified": "Verified",
+    "closed": "Closed",
+    "cancelled": "Cancelled"
   },
   "fonts": {
     "woff2": "woff2"
+  },
+  "login": {
+    "errors": {
+      "rateLimited": "Too many attempts. Please try again later.",
+      "noPhone": "No phone number registered. Please contact support.",
+      "otpFailed": "Failed to send verification code. Please try again."
+    }
+  },
+  "otp": {
+    "errors": {
+      "sessionExpired": "Your verification session expired. Please sign in again.",
+      "resendFailed": "Failed to resend OTP",
+      "networkError": "Network error. Please try again.",
+      "invalid": "Please enter a valid 6-digit code",
+      "verifyFailed": "Failed to verify OTP"
+    },
+    "title": "Enter Verification Code",
+    "subtitle": "We sent a 6-digit code to",
+    "devModeTitle": "Developer mode active",
+    "useDevCode": "Auto-fill code",
+    "devModeDescription": "Shown only in local development to speed up testing.",
+    "label": "Verification Code",
+    "expiresIn": "Expires in",
+    "expired": "Code expired. Please request a new one.",
+    "verifying": "Verifying...",
+    "verify": "Verify & Continue",
+    "didntReceive": "Didn",
+    "resending": "Sending...",
+    "resendIn": "Resend in",
+    "resend": "Resend Code",
+    "backToLogin": "Back to Login"
+  },
+  "communications": {
+    "title": "Communication Dashboard",
+    "subtitle": "Track all SMS, Email, and WhatsApp communications",
+    "export": "Export",
+    "refresh": "Refresh",
+    "stats": {
+      "totalSent": "Total Sent",
+      "deliveryRate": "Delivery Rate",
+      "failureRate": "Failure Rate",
+      "byChannel": "By Channel"
+    },
+    "search": "Search by user, phone, email...",
+    "filter": {
+      "allChannels": "All Channels",
+      "allStatuses": "All Statuses"
+    },
+    "table": {
+      "date": "Date",
+      "user": "User",
+      "channel": "Channel",
+      "recipient": "Recipient",
+      "status": "Status",
+      "message": "Message",
+      "actions": "Actions"
+    },
+    "loading": "Loading communications...",
+    "noData": "No communications found",
+    "view": "View",
+    "previous": "Previous",
+    "page": "Page",
+    "of": "of",
+    "next": "Next",
+    "details": {
+      "title": "Communication Details",
+      "user": "User",
+      "channel": "Channel",
+      "status": "Status",
+      "recipient": "Recipient",
+      "subject": "Subject",
+      "message": "Message",
+      "sent": "Sent At",
+      "delivered": "Delivered At",
+      "error": "Error",
+      "metadata": "Metadata"
+    }
+  },
+  "search": {
+    "results": {
+      "title": "Results"
+    }
+  },
+  "ats": {
+    "errors": {
+      "authenticationRequired": "Authentication required",
+      "insufficientPermissions": "You do not have permission to access this feature",
+      "moduleDisabled": "ATS module is not enabled for your tenant",
+      "seatLimitExceeded": "ATS seat limit exceeded. Please contact an administrator"
+    }
   }
 }
