fix(security): fail-closed tenant validation + queue payload schema
SECURITY FIXES:
- tryActivatePackage: Now throws Error instead of silent return on missing orgId
  This ensures fail-closed behavior for tenant isolation enforcement

- Queue payload validation: Added Zod schema (ActivationJobDataSchema) to validate
  aqarPaymentId, invoiceId, orgId as required strings
  - enqueueActivationRetry validates before enqueueing
  - Worker validates job.data and fails job if invalid

I18N COVERAGE:
- Added 22 dynamic role/subrole translation keys with .label/.description format
- Roles: superadmin, admin, corporateowner, teammember, technician,
         propertymanager, tenant, vendor, guest
- SubRoles: financeofficer, hrofficer, supportagent, operationsmanager
- Both EN and AR translations included

All verification gates passed:
- pnpm typecheck: 0 errors
- pnpm lint: 0 errors
- Translation audit: Catalog Parity OK, Code Coverage OK

--- a/i18n/sources/missing-keys-patch.translations.json
+++ b/i18n/sources/missing-keys-patch.translations.json
@@ -277,7 +277,29 @@
     "upgrade.upgradeTo": "Upgrade to {plan}",
     "upgrade.comparePlans": "Compare Plans",
     "upgrade.guarantee": "30-day money-back guarantee",
-    "i18n.comingSoon": "Coming Soon"
+    "i18n.comingSoon": "Coming Soon",
+    "admin.roles.superadmin.label": "Super Admin",
+    "admin.roles.superadmin.description": "Full system access with complete administrative control",
+    "admin.roles.admin.label": "Admin",
+    "admin.roles.admin.description": "Organization administrator with full management access",
+    "admin.roles.corporateowner.label": "Corporate Owner",
+    "admin.roles.corporateowner.description": "Property corporation or holding company owner",
+    "admin.roles.teammember.label": "Team Member",
+    "admin.roles.teammember.description": "Internal team member with specialized role access",
+    "admin.roles.technician.label": "Technician",
+    "admin.roles.technician.description": "Field service technician handling work orders",
+    "admin.roles.propertymanager.label": "Property Manager",
+    "admin.roles.propertymanager.description": "Manages properties, units, and tenant relations",
+    "admin.roles.tenant.label": "Tenant",
+    "admin.roles.tenant.description": "Property tenant with unit and service access",
+    "admin.roles.vendor.label": "Vendor",
+    "admin.roles.vendor.description": "External service provider or contractor",
+    "admin.roles.guest.label": "Guest",
+    "admin.roles.guest.description": "Limited access visitor account",
+    "admin.subRoles.financeofficer.label": "Finance Officer",
+    "admin.subRoles.hrofficer.label": "HR Officer",
+    "admin.subRoles.supportagent.label": "Support Agent",
+    "admin.subRoles.operationsmanager.label": "Operations Manager"
   },
   "ar": {
     "billing.history.tagline": "عرض سجل الفواتير",
@@ -557,6 +579,28 @@
     "upgrade.upgradeTo": "ترقية إلى {plan}",
     "upgrade.comparePlans": "مقارنة الخطط",
     "upgrade.guarantee": "ضمان استرداد الأموال خلال 30 يوماً",
-    "i18n.comingSoon": "قريباً"
+    "i18n.comingSoon": "قريباً",
+    "admin.roles.superadmin.label": "مدير عام",
+    "admin.roles.superadmin.description": "صلاحيات كاملة على النظام مع تحكم إداري شامل",
+    "admin.roles.admin.label": "مدير",
+    "admin.roles.admin.description": "مدير المنظمة مع صلاحيات إدارة كاملة",
+    "admin.roles.corporateowner.label": "مالك شركة",
+    "admin.roles.corporateowner.description": "مالك شركة عقارية أو شركة قابضة",
+    "admin.roles.teammember.label": "عضو فريق",
+    "admin.roles.teammember.description": "عضو فريق داخلي بصلاحيات متخصصة",
+    "admin.roles.technician.label": "فني",
+    "admin.roles.technician.description": "فني خدمات ميدانية يتعامل مع أوامر العمل",
+    "admin.roles.propertymanager.label": "مدير عقارات",
+    "admin.roles.propertymanager.description": "يدير العقارات والوحدات وعلاقات المستأجرين",
+    "admin.roles.tenant.label": "مستأجر",
+    "admin.roles.tenant.description": "مستأجر عقار مع صلاحيات الوحدة والخدمات",
+    "admin.roles.vendor.label": "مورد",
+    "admin.roles.vendor.description": "مزود خدمات خارجي أو مقاول",
+    "admin.roles.guest.label": "ضيف",
+    "admin.roles.guest.description": "حساب زائر بصلاحيات محدودة",
+    "admin.subRoles.financeofficer.label": "مسؤول مالي",
+    "admin.subRoles.hrofficer.label": "مسؤول موارد بشرية",
+    "admin.subRoles.supportagent.label": "وكيل دعم",
+    "admin.subRoles.operationsmanager.label": "مدير عمليات"
   }
 }
