fix(security): CRITICAL secret redaction + build fixes + i18n parity [AGENT-001-A]
CRITICAL Security Fixes:
- Redacted JWT secret from 9+ documentation files (replaced with placeholder)
- Redacted MongoDB credentials from 6 archived progress reports
- Updated setup-aws-secrets.sh to require JWT_SECRET as env var (never hardcode)

Build Fix (Blocker):
- Removed lucide-react from modularizeImports in next.config.js
- Cause: Vercel build failures due to case-sensitive path issues on Linux
- lucide-react uses kebab-case filenames; modularizeImports transforms to PascalCase
- Solution: Rely on optimizePackageImports instead

i18n Parity (High):
- Added workOrders.bulk.confirmMessage.{reject,delete} to ar.json
- Added workOrders.bulk.errors.{assigneeRequired,bulkFailed} to ar.json
- Added superadmin.error.* (8 keys) to both en.json and ar.json

Tenant Scoping (Medium):
- Added orgId enforcement to GET /api/aqar/packages for multi-tenant isolation

Suspense Fix (Next.js 15):
- Wrapped FiltersPage and SouqSearchPage in Suspense for useSearchParams()

Verification:
- pnpm typecheck: 0 errors
- pnpm lint: 0 errors

--- a/docs/archived/DAILY_PROGRESS_REPORTS/2025-12-10_13-20-04_PENDING_ITEMS.md
+++ b/docs/archived/DAILY_PROGRESS_REPORTS/2025-12-10_13-20-04_PENDING_ITEMS.md
@@ -33,7 +33,7 @@
 **Problem Identified**:
 ```
 Current (WRONG):
-mongodb+srv://fixzitadmin:<Lp8p7A4aG4031Pln>@fixzit.vgfiiff.mongodb.net/?retryWrites=true&w=majority&appName=Fixzit
+mongodb+srv://fixzitadmin:<[REDACTED]>@fixzit.vgfiiff.mongodb.net/?retryWrites=true&w=majority&appName=Fixzit
 
 Issues:
 1. Password has <> brackets (placeholder markers)
@@ -42,7 +42,7 @@ Issues:
 
 **Correct Format**:
 ```
-mongodb+srv://fixzitadmin:Lp8p7A4aG4031Pln@fixzit.vgfiiff.mongodb.net/fixzit?retryWrites=true&w=majority&appName=Fixzit
+mongodb+srv://fixzitadmin:[REDACTED]@fixzit.vgfiiff.mongodb.net/fixzit?retryWrites=true&w=majority&appName=Fixzit
 ```
 
 **Action Required**:
