--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -850,6 +850,14 @@
       "reject": "رفض",
       "assign": "تعيين",
       "delete": "حذف",
+      "confirmMessage": {
+        "reject": "هل أنت متأكد من رفض هذه العناصر؟",
+        "delete": "لا يمكن التراجع عن هذا الإجراء. هل تريد حذف العناصر المحددة؟"
+      },
+      "errors": {
+        "assigneeRequired": "المكلف مطلوب لهذا الإجراء.",
+        "bulkFailed": "فشل إجراء {{action}} الجماعي."
+      },
       "assignRequiresSelection": "التعيين يتطلب اختيار المكلف."
     },
     "approvals": {
@@ -5133,6 +5141,16 @@
     "goToLanding": "الذهاب للصفحة الرئيسية",
     "searchSuperadmin": "بحث في المسؤول الأعلى",
     "switchTenant": "تبديل المستأجر",
+    "error": {
+      "title": "حدث خطأ",
+      "message": "حدث خطأ غير متوقع في لوحة المسؤول الأعلى. تم إخطار فريقنا.",
+      "details": "التفاصيل التقنية",
+      "digestLabel": "المعرّف",
+      "tryAgain": "حاول مرة أخرى",
+      "goToLogin": "الذهاب لتسجيل الدخول",
+      "exit": "الخروج من لوحة المسؤول",
+      "footer": "إذا استمرت هذه المشكلة، يرجى الاتصال بالدعم."
+    },
     "nav": {
       "issues": "المشاكل",
       "ssot": "عارض SSOT",
